move files into html and php folders

--- a/html/encrypt_form.html
+++ b/html/encrypt_form.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <h1>Type in the secret message you would like to encode!</h1>
-        <form action="php/encrypt.php">
+        <form action="../php/encrypt.php">
             <div class="form-group">
                 <label for="message">Message to encrypt</label>
                 <input id="message" name="message" class="form-control" type="text">
