--- a/html/factorial_form.html
+++ b/html/factorial_form.html
@@ -5,7 +5,7 @@
     <title>Operators Practice</title>
   </head>
   <body>
-    <form action="factorial.php">
+    <form action="../php/factorial.php">
       <div class="form-group">
         <label for="starting_number">Enter a number to get it's factorial</label>
         <input type="text" name="starting_number" class="form-control" id="starting_number">
