--- a/html/repeater_form.html
+++ b/html/repeater_form.html
@@ -7,7 +7,7 @@
   <body>
       <div class="container">
           <h1>Hi! I'm a parrot website. I'll repeat back what you say!</h1>
-          <form action="repeater.php">
+          <form action="../php/repeater.php">
               <div class="form-group">
                   <label for="repeat_text">What would you like me to say?</label>
                   <input id="repeat_text" name="repeat_text" class="form-control" type="text">
